--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Paginate a document by breaking one or more containers vertically into multiple fragments. ",
   "main": "src/index.js",
   "scripts": {
+    "release": "release-it",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
